# progres_liga

./: .env.example  .gitignore  AGENTS.md  README.md  dev.sh  package.json  pnpm-lock.yaml  render.yaml  turbo.json
.husky/: pre-commit
apps/web/: .env.example  eslint.config.mjs  nuxt.config.ts  package.json  tsconfig.eslint.json
apps/web/app/pages/: index.vue
scripts/: sync-local-env.sh
services/api/: .env.example  pyproject.toml
services/api/app/: config.py  main.py
supabase/: config.toml
supabase/migrations/: 20260613120000_leaderboard.sql
