[project]
name = "progres-liga-api"
version = "0.1.0"
description = "FastAPI backend for ProgresLiga — gym progress rankings"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.8",
    "supabase>=2.18",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3",
    "ruff>=0.14",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["F", "I"]
